@@ -176,6 +176,10 @@ class BrowserView extends JPanel
 				browser.directoryLoaded(node,loadInfo,addToHistory);
 				if (delayedAWTTask != null)
 					delayedAWTTask.run();
+				
+				// -1 means the divider should be reset to a value that attempts 
+				// to honor the preferred size of the left/top component
+				splitPane.setDividerLocation(-1);
 			}
 		};
 		ThreadUtilities.runInBackground(new ListDirectoryBrowserTask(browser,
@@ -647,13 +651,6 @@ class BrowserView extends JPanel
 	
 	class ParentDirectoryList extends JList
 	{
-		@Override
-		public Dimension getPreferredSize() {
-			Dimension d = super.getPreferredSize();
-			splitPane.setDividerLocation(browser.isHorizontalLayout() ? d.width + 3 : d.height + 3);
-			return d;
-		}
-		
 		@Override
 		protected void processKeyEvent(KeyEvent evt)
 		{
